Fix some performance issues in secret management
Signed-off-by: Gerben Kroes <gerben@kroesctrl.nl>