@@ -13,10 +13,9 @@ import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 import static org.assertj.core.api.Assertions.assertThatIllegalStateException;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
+import static org.opensmartgridplatform.secretmanagement.application.domain.SecretType.E_METER_AUTHENTICATION_KEY;
 
 import java.util.Arrays;
 import java.util.Date;
@@ -29,13 +28,13 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.stubbing.Answer;
 import org.opensmartgridplatform.secretmanagement.application.domain.DbEncryptedSecret;
 import org.opensmartgridplatform.secretmanagement.application.domain.DbEncryptionKeyReference;
 import org.opensmartgridplatform.secretmanagement.application.domain.SecretStatus;
 import org.opensmartgridplatform.secretmanagement.application.domain.SecretType;
 import org.opensmartgridplatform.secretmanagement.application.domain.TypedSecret;
 import org.opensmartgridplatform.secretmanagement.application.repository.DbEncryptedSecretRepository;
-import org.opensmartgridplatform.secretmanagement.application.repository.DbEncryptionKeyRepository;
 import org.opensmartgridplatform.shared.exceptionhandling.EncrypterException;
 import org.opensmartgridplatform.shared.security.EncryptedSecret;
 import org.opensmartgridplatform.shared.security.EncryptionDelegate;
@@ -52,7 +51,7 @@ public class SecretManagementServiceTest {
 
   @Mock private EncryptionDelegate encryptionDelegate;
   @Mock private DbEncryptedSecretRepository secretRepository;
-  @Mock private DbEncryptionKeyRepository keyRepository;
+  @Mock private EncryptionKeyReferenceCacheService encryptionKeyReferenceCacheService;
   @Mock private RsaEncrypter encrypterForSecretManagementClient;
   @Mock private RsaEncrypter decrypterForSecretManagement;
   @Mock private SecretManagementMetrics secretManagementMetrics;
@@ -64,7 +63,7 @@ public class SecretManagementServiceTest {
             this.encryptionDelegate,
             ENCRYPTION_PROVIDER_TYPE,
             this.secretRepository,
-            this.keyRepository,
+            this.encryptionKeyReferenceCacheService,
             this.encrypterForSecretManagementClient,
             this.decrypterForSecretManagement,
             this.secretManagementMetrics);
@@ -162,9 +161,9 @@ public class SecretManagementServiceTest {
     final EncryptedSecret encryptedSecret =
         new EncryptedSecret(ENCRYPTION_PROVIDER_TYPE, "aesSecret0000001".getBytes());
 
-    when(this.keyRepository.findByTypeAndValid(any(), any()))
+    when(this.encryptionKeyReferenceCacheService.findAllByTypeAndValid(any(), any()))
         .thenReturn(Arrays.asList(keyReference));
-    when(this.keyRepository.findByTypeAndReference(ENCRYPTION_PROVIDER_TYPE, "1"))
+    when(this.encryptionKeyReferenceCacheService.getKeyByReference(ENCRYPTION_PROVIDER_TYPE, "1"))
         .thenReturn(keyReference);
     when(this.encryptionDelegate.encrypt(any(), any(), anyString())).thenReturn(encryptedSecret);
 
@@ -212,13 +211,18 @@ public class SecretManagementServiceTest {
     final DbEncryptedSecret dbEncryptedSecret =
         this.getSecret(SecretType.E_METER_ENCRYPTION_KEY_UNICAST, 100);
 
-    when(this.keyRepository.findByTypeAndValid(any(), any()))
+    when(this.encryptionKeyReferenceCacheService.findAllByTypeAndValid(any(), any()))
         .thenReturn(Arrays.asList(keyReference));
-    when(this.keyRepository.findByTypeAndReference(ENCRYPTION_PROVIDER_TYPE, "1"))
+    when(this.encryptionKeyReferenceCacheService.getKeyByReference(ENCRYPTION_PROVIDER_TYPE, "1"))
         .thenReturn(keyReference);
-    when(this.secretRepository.findSecrets(
-            SOME_DEVICE, SecretType.E_METER_ENCRYPTION_KEY_UNICAST, SecretStatus.NEW))
-        .thenReturn(Arrays.asList(dbEncryptedSecret));
+    when(this.secretRepository.withdrawSecretsWithStatusNew(
+            SOME_DEVICE, List.of(SecretType.E_METER_ENCRYPTION_KEY_UNICAST)))
+        .thenAnswer(
+            (Answer<Integer>)
+                invocationOnMock -> {
+                  dbEncryptedSecret.setSecretStatus(SecretStatus.WITHDRAWN);
+                  return 1;
+                });
     when(this.encryptionDelegate.encrypt(any(), any(), anyString())).thenReturn(encryptedSecret);
 
     this.service.storeSecrets(SOME_DEVICE, Arrays.asList(typedSecret));
@@ -227,11 +231,6 @@ public class SecretManagementServiceTest {
         this.getListOfDbEncryptedSecretsArgumentCaptor();
     verify(this.secretRepository).saveAll(secretListArgumentCaptor.capture());
     final List<DbEncryptedSecret> savedSecrets = secretListArgumentCaptor.getValue();
-
-    final ArgumentCaptor<DbEncryptedSecret> secretToWithdrawArgumentCaptor =
-        ArgumentCaptor.forClass(DbEncryptedSecret.class);
-    verify(this.secretRepository, times(1)).save(secretToWithdrawArgumentCaptor.capture());
-    final DbEncryptedSecret savedSecretToWithdraw = secretToWithdrawArgumentCaptor.getValue();
 
     assertThat(savedSecrets).isNotNull();
     assertThat(savedSecrets.size()).isEqualTo(1);
@@ -246,15 +245,15 @@ public class SecretManagementServiceTest {
         .isEqualTo(HexUtils.toHexString(encryptedSecret.getSecret()));
     assertThat(savedSecret.getSecretStatus()).isEqualTo(SecretStatus.NEW);
 
-    assertThat(savedSecretToWithdraw.getDeviceIdentification()).isEqualTo(SOME_DEVICE);
-    assertThat(savedSecretToWithdraw.getSecretType()).isEqualTo(typedSecret.getSecretType());
-    assertThat(savedSecretToWithdraw.getEncryptionKeyReference())
+    assertThat(dbEncryptedSecret.getDeviceIdentification()).isEqualTo(SOME_DEVICE);
+    assertThat(dbEncryptedSecret.getSecretType()).isEqualTo(typedSecret.getSecretType());
+    assertThat(dbEncryptedSecret.getEncryptionKeyReference())
         .isEqualTo(dbEncryptedSecret.getEncryptionKeyReference());
-    assertThat(savedSecretToWithdraw.getCreationTime()).isNotNull();
+    assertThat(dbEncryptedSecret.getCreationTime()).isNotNull();
 
-    assertThat(savedSecretToWithdraw.getEncodedSecret())
+    assertThat(dbEncryptedSecret.getEncodedSecret())
         .isEqualTo(dbEncryptedSecret.getEncodedSecret());
-    assertThat(savedSecretToWithdraw.getSecretStatus()).isEqualTo(SecretStatus.WITHDRAWN);
+    assertThat(dbEncryptedSecret.getSecretStatus()).isEqualTo(SecretStatus.WITHDRAWN);
   }
 
   @Test
@@ -263,7 +262,8 @@ public class SecretManagementServiceTest {
     final TypedSecret typedSecret =
         new TypedSecret("$3cr3t".getBytes(), SecretType.E_METER_MASTER_KEY);
 
-    when(this.keyRepository.findByTypeAndValid(any(), any())).thenReturn(Arrays.asList());
+    when(this.encryptionKeyReferenceCacheService.findAllByTypeAndValid(any(), any()))
+        .thenReturn(Arrays.asList());
 
     assertThatExceptionOfType(NoSuchElementException.class)
         .isThrownBy(() -> this.service.storeSecrets(SOME_DEVICE, Arrays.asList(typedSecret)));
@@ -275,7 +275,7 @@ public class SecretManagementServiceTest {
     final TypedSecret typedSecret =
         new TypedSecret("$3cr3t".getBytes(), SecretType.E_METER_MASTER_KEY);
 
-    when(this.keyRepository.findByTypeAndValid(any(), any()))
+    when(this.encryptionKeyReferenceCacheService.findAllByTypeAndValid(any(), any()))
         .thenReturn(Arrays.asList(new DbEncryptionKeyReference(), new DbEncryptionKeyReference()));
 
     assertThatIllegalStateException()
@@ -291,7 +291,7 @@ public class SecretManagementServiceTest {
     keyReference.setEncryptionProviderType(ENCRYPTION_PROVIDER_TYPE);
     keyReference.setReference("keyReferenceString");
 
-    when(this.keyRepository.findByTypeAndValid(any(), any()))
+    when(this.encryptionKeyReferenceCacheService.findAllByTypeAndValid(any(), any()))
         .thenReturn(Arrays.asList(keyReference));
     when(this.encryptionDelegate.encrypt(any(), any(), anyString()))
         .thenThrow(new EncrypterException("Encryption error"));
@@ -319,9 +319,9 @@ public class SecretManagementServiceTest {
     existingDbSecret.setDeviceIdentification(SOME_DEVICE);
     existingDbSecret.setEncryptionKeyReference(keyReference);
 
-    when(this.keyRepository.findByTypeAndValid(any(), any()))
+    when(this.encryptionKeyReferenceCacheService.findAllByTypeAndValid(any(), any()))
         .thenReturn(Arrays.asList(keyReference));
-    when(this.keyRepository.findByTypeAndReference(ENCRYPTION_PROVIDER_TYPE, "1"))
+    when(this.encryptionKeyReferenceCacheService.getKeyByReference(ENCRYPTION_PROVIDER_TYPE, "1"))
         .thenReturn(keyReference);
     when(this.encryptionDelegate.encrypt(any(), any(), anyString()))
         .thenReturn(encryptedSecret); // encrypt new DB secret
@@ -447,7 +447,7 @@ public class SecretManagementServiceTest {
     keyReference.setReference(reference);
     keyReference.setEncryptionProviderType(ENCRYPTION_PROVIDER_TYPE);
     keyReference.setValidFrom(now);
-    when(this.keyRepository.findByTypeAndValid(any(), any()))
+    when(this.encryptionKeyReferenceCacheService.findAllByTypeAndValid(any(), any()))
         .thenReturn(Arrays.asList(keyReference));
     when(this.encryptionDelegate.generateAes128BitsSecret(ENCRYPTION_PROVIDER_TYPE, reference))
         .thenReturn(aesSecret);
@@ -455,10 +455,10 @@ public class SecretManagementServiceTest {
     when(this.encrypterForSecretManagementClient.encrypt(any())).thenReturn(rsaSecret);
     final List<TypedSecret> secrets =
         this.service.generateAndStoreSecrets(
-            SOME_DEVICE, Arrays.asList(SecretType.E_METER_AUTHENTICATION_KEY));
+            SOME_DEVICE, Arrays.asList(E_METER_AUTHENTICATION_KEY));
     assertThat(secrets.size()).isEqualTo(1);
     final TypedSecret typedSecret = secrets.get(0);
-    assertThat(typedSecret.getSecretType()).isEqualTo(SecretType.E_METER_AUTHENTICATION_KEY);
+    assertThat(typedSecret.getSecretType()).isEqualTo(E_METER_AUTHENTICATION_KEY);
     assertThat(typedSecret.getSecret()).isEqualTo(rsaSecret);
   }
 
@@ -479,13 +479,18 @@ public class SecretManagementServiceTest {
     keyReference.setEncryptionProviderType(ENCRYPTION_PROVIDER_TYPE);
     keyReference.setValidFrom(now);
 
-    when(this.keyRepository.findByTypeAndValid(any(), any()))
+    when(this.encryptionKeyReferenceCacheService.findAllByTypeAndValid(any(), any()))
         .thenReturn(Arrays.asList(keyReference));
     when(this.encryptionDelegate.generateAes128BitsSecret(ENCRYPTION_PROVIDER_TYPE, reference))
         .thenReturn(aesSecret);
-    when(this.secretRepository.findSecrets(
-            SOME_DEVICE, SecretType.E_METER_ENCRYPTION_KEY_UNICAST, SecretStatus.NEW))
-        .thenReturn(Arrays.asList(dbEncryptedSecret));
+    when(this.secretRepository.withdrawSecretsWithStatusNew(
+            SOME_DEVICE, List.of(SecretType.E_METER_ENCRYPTION_KEY_UNICAST)))
+        .thenAnswer(
+            (Answer<Integer>)
+                invocationOnMock -> {
+                  dbEncryptedSecret.setSecretStatus(SecretStatus.WITHDRAWN);
+                  return 1;
+                });
 
     when(this.encryptionDelegate.decrypt(any(), any())).thenReturn(secret);
     when(this.encrypterForSecretManagementClient.encrypt(any())).thenReturn(rsaSecret);
@@ -493,12 +498,11 @@ public class SecretManagementServiceTest {
     final SecretType secretType = SecretType.E_METER_ENCRYPTION_KEY_UNICAST;
     this.service.generateAndStoreSecrets(SOME_DEVICE, Arrays.asList(secretType));
 
-    final List<DbEncryptedSecret> foundSecrets =
-        this.secretRepository.findSecrets(
-            SOME_DEVICE, SecretType.E_METER_ENCRYPTION_KEY_UNICAST, SecretStatus.NEW);
-    assertThat(foundSecrets).hasSize(1);
+    final int updatedSecrets =
+        this.secretRepository.withdrawSecretsWithStatusNew(
+            SOME_DEVICE, List.of(SecretType.E_METER_ENCRYPTION_KEY_UNICAST));
+    assertThat(updatedSecrets).isEqualTo(1);
 
-    verify(this.secretRepository, never()).saveAll(Arrays.asList(dbEncryptedSecret));
     assertThat(dbEncryptedSecret.getCreationTime()).isEqualTo(originalCreationTime);
     assertThat(dbEncryptedSecret.getSecretStatus()).isEqualTo(SecretStatus.WITHDRAWN);
   }
@@ -524,25 +528,28 @@ public class SecretManagementServiceTest {
 
     final Date olderCreationTime = secretOlderEncryption.getCreationTime();
 
-    when(this.keyRepository.findByTypeAndValid(any(), any()))
+    final SecretType encryptionSecretType = SecretType.E_METER_ENCRYPTION_KEY_UNICAST;
+    final SecretType authenticationSecretType = E_METER_AUTHENTICATION_KEY;
+
+    when(this.encryptionKeyReferenceCacheService.findAllByTypeAndValid(any(), any()))
         .thenReturn(Arrays.asList(keyReference));
     when(this.encryptionDelegate.generateAes128BitsSecret(ENCRYPTION_PROVIDER_TYPE, reference))
         .thenReturn(aesSecret);
-    when(this.secretRepository.findSecrets(
-            SOME_DEVICE, SecretType.E_METER_ENCRYPTION_KEY_UNICAST, SecretStatus.NEW))
-        .thenReturn(Arrays.asList(secretOldEncryption, secretOlderEncryption));
+    when(this.secretRepository.withdrawSecretsWithStatusNew(
+            SOME_DEVICE, List.of(encryptionSecretType, authenticationSecretType)))
+        .thenAnswer(
+            (Answer<Integer>)
+                invocationOnMock -> {
+                  secretOldEncryption.setSecretStatus(SecretStatus.WITHDRAWN);
+                  secretOlderEncryption.setSecretStatus(SecretStatus.WITHDRAWN);
+                  return 2;
+                });
 
     when(this.encryptionDelegate.decrypt(any(), any())).thenReturn(secret);
     when(this.encrypterForSecretManagementClient.encrypt(any())).thenReturn(rsaSecret);
 
-    final SecretType encryptionSecretType = SecretType.E_METER_ENCRYPTION_KEY_UNICAST;
-    final SecretType authenticationSecretType = SecretType.E_METER_AUTHENTICATION_KEY;
-
     this.service.generateAndStoreSecrets(
         SOME_DEVICE, Arrays.asList(encryptionSecretType, authenticationSecretType));
-
-    verify(this.secretRepository, never()).saveAll(Arrays.asList(secretOldEncryption));
-    verify(this.secretRepository, never()).saveAll(Arrays.asList(secretOldEncryption));
 
     assertThat(secretOldEncryption.getCreationTime())
         .isEqualTo(originalCreationTimeEncryptionSecret);
